class Campus {
  final String id;
  final String name;
  final String city;
  final String address;
  final String zipCode;
  final DateTime createdAt;

  Campus({
    required this.id,
    required this.name,
    required this.city,
    required this.address,
    required this.zipCode,
    required this.createdAt,
  });
}
