class Proms {
  final String id;
  final String name;
  final String campusId;
  final DateTime createdAt;

  Proms({
    required this.id,
    required this.name,
    required this.campusId,
    required this.createdAt,
  });
}
