class Rooms {
  final String id;
  final String promsId;
  final String name;
  final String campus;
  final int capacity;
  final DateTime createdAt;

  Rooms({
    required this.id,
    required this.promsId,
    required this.name,
    required this.campus,
    required this.capacity,
    required this.createdAt,
  });
}
