class UsersReserves {
  final String id;
  final String userId;
  final String reservationId;
  final DateTime createdAt;

  UsersReserves({
    required this.id,
    required this.userId,
    required this.reservationId,
    required this.createdAt,
  });
}
