%%{init: {'er': {'layout': 'elk'}, 'flowchart': {'curve': 'linear'}}}%%
erDiagram
    direction LR

    USERS {
        uuid        badge_id     PK
        uuid        auth_user_id PK
        uuid        proms_id     FK
        string      first_name
        string      last_name
        string      status
        string      avatar_url
        timestampz  created_at
    }

    ROOMS {
        uuid        id              PK
        uuid        campus_id       FK
        string      name
        int         capacity
        timestampz  created_at
    }

    RESERVATIONS {
        uuid        id                  PK
        uuid        users_reservation   FK
        timestampz  starts
        timestampz  ends
        timestampz  created_at
    }

    USERS_RESERVES {
        uuid        id              PK
        uuid        user_id         FK
        uuid        reservation_id  FK
        timestampz  created_at
    }

    PROMS {
        uuid        id              PK
        uuid        campus_id       FK
        string      name
        timestampz  created_at
    }

    COURSES {
        uuid        id              PK
        string      course_name
        uuid        instructor_id      FK
        uuid        room_id            FK      
        uuid        reservation_id     FK      
        timestampz  created_at
    }

    CAMPUS {
        uuid        id              PK
        string      name
        string      city
        string      address
        string      zip_code    
        timestampz  created_at
    }

    USERS ||--o{ USERS_RESERVES : "reserve"
    USERS_RESERVES }o--|| RESERVATIONS : "reserve"
    PROMS ||--o{ USERS : "has"
    USERS }o--|| PROMS : "belongs to"
    USERS ||--o{ COURSES : "teaches"
    ROOMS ||--o{ COURSES : "takes place in"
    COURSES ||--|| RESERVATIONS : "is scheduled for"
    RESERVATIONS ||--o{ COURSES : "schedules"
    CAMPUS ||--o{ ROOMS : "has"
    CAMPUS ||--o{ PROMS : "has"




